--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "core-js": "^3.6.5",
+    "normalize.css": "^8.0.1",
+    "scrollreveal": "^4.0.9",
     "vue": "^2.6.11",
+    "vue-dark-mode-switch": "^1.0.7",
     "vue-router": "^3.2.0",
+    "vue-scroll-reveal": "^1.0.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
